added city of oaks marathon results

--- a/events.html
+++ b/events.html
@@ -33,9 +33,11 @@
 
     <h3>Marathons</h3>
     <div class="row">
-        <div class="col-md-3">.col-md-3</div>
-        <div class="col-md-6">.col-md-6</div>
-        <div class="col-md-3">.col-md-3</div>
+        <div class="col-md-2">City of Oaks</div>
+        <div class="col-md-2">November 1 2015</div>
+        <div class="col-md-3">Full Marathon</div>
+        <div class="col-md-2">03:32:39</div>
+        <div class="col-md-3"><a href="http://www.setupevents.com/?fuseaction=event_results&id=4689">results</a></div>
     </div>
 
 </div> <!-- /container -->
