added all triathalon details and links to events page

--- a/events.html
+++ b/events.html
@@ -33,11 +33,80 @@
 
     <h3>Marathons</h3>
     <div class="row">
-        <div class="col-md-2">City of Oaks</div>
+        <div class="col-md-3">Rock ‘n’ Roll Raleigh</div>
+        <div class="col-md-2">April 12 2015</div>
+        <div class="col-md-2">Half Marathon</div>
+        <div class="col-md-1">01:40:43</div>
+        <div class="col-md-2"><a href="http://running.competitor.com/rnrresults?eId=76&eiId=235&seId=&pId=114756">results</a></div>
+        <div class="col-md-2"><a href="">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">High Country Half Marathon</div>
+        <div class="col-md-2">August 29 2015</div>
+        <div class="col-md-2">Half Marathon</div>
+        <div class="col-md-1">01:39:45</div>
+        <div class="col-md-2"><a href="http://triplecrown.appstate.edu/sites/triplecrown.appstate.edu/files/Half%20Marathon%202015%20Overall.htm">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/881226528">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">City of Oaks</div>
         <div class="col-md-2">November 1 2015</div>
-        <div class="col-md-3">Full Marathon</div>
-        <div class="col-md-2">03:32:39</div>
-        <div class="col-md-3"><a href="http://www.setupevents.com/?fuseaction=event_results&id=4689">results</a></div>
+        <div class="col-md-2">Full Marathon</div>
+        <div class="col-md-1">03:32:39</div>
+        <div class="col-md-2"><a href="http://www.setupevents.com/?fuseaction=event_results&id=4689">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/944416925">stats</a></div>
+    </div>
+
+    <hr />
+
+    <h3>Triathalons</h3>
+    <div class="row">
+        <div class="col-md-3">Lake Hickory Triathalon</div>
+        <div class="col-md-2">June 27 2015</div>
+        <div class="col-md-2">Sprint</div>
+        <div class="col-md-1">01:30:25</div>
+        <div class="col-md-2"><a href="http://jonesracingcompany.com/2015-results/hickoryoverall/">results</a></div>
+        <div class="col-md-2"><a href="">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Azalea Sprint Triathalon</div>
+        <div class="col-md-2">March 12 2016</div>
+        <div class="col-md-2">Sprint</div>
+        <div class="col-md-1">01:02:22</div>
+        <div class="col-md-2"><a href="http://setupevents.com/index.cfm?fuseaction=event_results&id=4758">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/1160396035">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Peasantman Triathlon</div>
+        <div class="col-md-2">May 8 2016</div>
+        <div class="col-md-2">Olympic</div>
+        <div class="col-md-1">02:52:24</div>
+        <div class="col-md-2"><a href="https://www.amazingracetiming.com/results/2016/peasantman-triathlon/511-results-triathlon-olympic.html">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/1160396547">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Pinehurst International Triathalon</div>
+        <div class="col-md-2">May 21 2016</div>
+        <div class="col-md-2">Olympic</div>
+        <div class="col-md-1">03:25:15</div>
+        <div class="col-md-2"><a href="http://setupevents.com/index.cfm?fuseaction=event_results&id=4841">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/1182003711">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Lake Logan International</div>
+        <div class="col-md-2">August 7 2016</div>
+        <div class="col-md-2">Olympic</div>
+        <div class="col-md-1">03:09:17</div>
+        <div class="col-md-2"><a href="http://www.setupevents.com/index.cfm?fuseaction=event_results&id=4904">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/1296531540">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Outer Banks Triathlon</div>
+        <div class="col-md-2">September 17 2016</div>
+        <div class="col-md-2">Half Ironman</div>
+        <div class="col-md-1">06:39:51</div>
+        <div class="col-md-2"><a href="http://www.itsyourrace.com/Results/58/2016/39373/69">results</a></div>
+        <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/1368370118">stats</a></div>
     </div>
 
 </div> <!-- /container -->
