--- a/events.html
+++ b/events.html
@@ -56,6 +56,22 @@
         <div class="col-md-2"><a href="http://www.setupevents.com/?fuseaction=event_results&id=4689">results</a></div>
         <div class="col-md-2"><a href="https://connect.garmin.com/modern/activity/944416925">stats</a></div>
     </div>
+    <div class="row">
+        <div class="col-md-3">Race 13.1 Wilmington</div>
+        <div class="col-md-2">February 19 2017</div>
+        <div class="col-md-2">Half Marathon</div>
+        <div class="col-md-1">1:33:20</div>
+        <div class="col-md-2"><a href="http://racesonline.com/events/race-13-1-wilmington-nc/results/2017/bib/1101">results</a></div>
+        <div class="col-md-2"><a href="">stats</a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">Rock 'n' Roll Raleigh</div>
+        <div class="col-md-2">April 2 2017</div>
+        <div class="col-md-2">Full Marathon</div>
+        <div class="col-md-1">3:29:53</div>
+        <div class="col-md-2"><a href="http://www.runrocknroll.com/finisher-zone/search-and-results/?resultpage=1&eventid=48&subevent_id=1&bib=1039">results</a></div>
+        <div class="col-md-2"><a href="">stats</a></div>
+    </div>
 
     <hr />
 
